--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<p>Hello pedal world!</p>
+<h1>S2L Audio</h1>
+<p>Guitar effects company based in Germany. Site under construction.</p>
+<p>
+<a href="https://www.instagram.com/s2laudio">instagram.com/s2laudio</a><br>
+<a href="https://www.facebook.com/s2laudio">facebook.com/s2laudio</a><br>
+<a href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
+</p>
 </body>
-</html> 
+</html>
