--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<img class="logo" src="s2l_logo_s.png">
 <h1>S2L Audio</h1>
 <p>Guitar effects company based in Germany. Site under construction.</p>
 <p>
@@ -11,5 +12,6 @@
 <a href="https://www.facebook.com/s2laudio">facebook.com/s2laudio</a><br>
 <a href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
 </p>
+<a class="footer" href="impressum.html">Impressum</a>
 </body>
 </html>
