--- a/impressum.html
+++ b/impressum.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="robots" content="noindex">
 <link rel="stylesheet" href="style.css">
-<title>S2L Audio</title>
+<title>S2L Audio - Impressum</title>
+<meta name="robots" content="noindex">
 </head>
 <body>
 <div class="impressum">
