--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<title>S2L Audio</title>
 </head>
 <body>
 <img class="logo" src="s2l_logo_s.png">
