--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@ Bachstraße 26<br>
 Janis Erker<br><br>
 <strong>Kontakt:</strong><br>
 Telefon: 015905091042<br>
-E-Mail: <a>info@s2laudio.com</a><br><br>
+E-Mail: <a href="mailto:info@s2laudio.com">info@s2laudio.com</a><br><br>
 <strong>Verbraucherstreitbeilegung / Universalschlichtungsstelle</strong><br>
 Wir nehmen nicht an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teil und sind dazu auch nicht verpflichtet.
 <br><br>
