--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,7 @@
 <title>S2L Audio - Impressum</title>
 </head>
 <body>
-<div class="impressum">
+<div id="impressum">
 <h1><a href="index.html">Back to main site »</a></h1>
 <p>---</p>
 <h2>Impressum</h2> 
