--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <h1>S2L Audio</h1>
 <p>Guitar effects company based in Germany. Site under construction.</p>
 <p>
-<a href="https://www.instagram.com/s2laudio">instagram.com/s2laudio</a><br>
-<a href="https://www.facebook.com/s2laudio">facebook.com/s2laudio</a><br>
-<a href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
+<a class="link" target="_blank" href="https://www.instagram.com/s2laudio">instagram.com/s2laudio</a><br>
+<a class="link" target="_blank" href="https://www.facebook.com/s2laudio">facebook.com/s2laudio</a><br>
+<a class="link" target="_blank" href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
+<a class="link" target="_blank" href="https://reverb.com/shop/gearandwhatever">reverb.com/shop/gearandwhatever</a>
 </p>
-<a class="footer" href="impressum.html">Impressum</a>
+<a id="footer" href="impressum.html">Impressum</a>
 </body>
 </html>
