--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <a class="link" target="_blank" href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
 <a class="link" target="_blank" href="https://reverb.com/shop/gearandwhatever">reverb.com/shop/gearandwhatever</a>
 </p>
-<a id="footer" href="impressum.html">Impressum</a>
+<a id="footer" href="impressum.html" rel="nofollow">Impressum</a>
 </body>
 </html>
