--- a/impressum.html
+++ b/impressum.html
@@ -6,6 +6,7 @@
 <meta name="googlebot" content="noindex">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="favicon.svg">
 <title>S2L Audio - Impressum</title>
 </head>
 <body>
