--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="favicon.svg">
 <title>S2L Audio</title>
 </head>
 <body>
-<img class="logo" src="s2l_logo_s.png">
+<img class="logo" src="s2l_logo_s.png" alt="S2L Audio">
 <h1>S2L Audio</h1>
 <p>Guitar effects company based in Germany. Site under construction.</p>
 <p>
