--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>S2L Audio</title>
 </head>
 <body>
-<img class="logo" src="s2l_logo_s.png" alt="S2L Audio">
+<img class="logo" src="s2l_logo.png" alt="S2L Audio">
 <h1>S2L Audio</h1>
 <p>Guitar effects company based in Germany. Site under construction.</p>
 <p>
