--- a/impressum.html
+++ b/impressum.html
@@ -6,7 +6,8 @@
 <meta name="googlebot" content="noindex">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/svg+xml" href="favicon.svg">
+<link rel="icon" type="image/png" href="favicon.png">
+<!--<link rel="icon" type="image/svg+xml" href="favicon.svg">-->
 <title>S2L Audio - Impressum</title>
 </head>
 <body>
