--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
 <img class="logo" src="s2l_logo.png" alt="S2L Audio">
 <h1>S2L Audio</h1>
-<p>Guitar effects company based in Germany. Site under construction.</p>
+<p>Site under construction.</p>
 <p>
 <a class="link" target="_blank" href="https://www.instagram.com/s2laudio">instagram.com/s2laudio</a><br>
 <a class="link" target="_blank" href="https://www.facebook.com/s2laudio">facebook.com/s2laudio</a><br>
-<a class="link" target="_blank" href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a><br>
-<a class="link" target="_blank" href="https://reverb.com/shop/gearandwhatever">reverb.com/shop/gearandwhatever</a>
+<a class="link" target="_blank" href="https://www.youtube.com/@s2laudio">youtube.com/@s2laudio</a>
 </p>
 <a id="footer" href="impressum.html" rel="nofollow">Impressum</a>
 </body>
