--- a/impressum.html
+++ b/impressum.html
@@ -16,11 +16,9 @@
 <p>---</p>
 <h2>Impressum</h2> 
 <p>Angaben gemäß § 5 DDG<br><br>
-S2L Audio Inh. Janis Erker<br>
+Janis Erker<br>
 Bachstraße 26<br> 
 45770 Marl<br><br>
-<strong>Vertreten durch:</strong><br>
-Janis Erker<br><br>
 <strong>Kontakt:</strong><br>
 Telefon: 01590-5091042<br>
 E-Mail: <a href="mailto:info@s2laudio.com">info@s2laudio.com</a><br><br>
